tests/parser/invalid/while-colon.inox
Module InvalidWhileColon

Main() :
    Var
        I := 0
    ;

    while I < 3 :
        I := I + 1
    ;
;
